--- a/index.html
+++ b/index.html
@@ -27,12 +27,19 @@
         </div>
       </div>
     </header>
+
     <div class="home">
-      <div class="container"></div>
+      <div class="container">
+
+      </div>
     </div>
+
     <div class="about-us">
-      <div class="container"></div>
+      <div class="container">
+
+      </div>
     </div>
+
     <div class="our-vision">
       <div class="container">
         <ul class="flex-list">
@@ -69,6 +76,7 @@
     <div class="story">
       <div class="container"></div>
     </div>
+
     <!-- testi -->
     <div class="testi">
       <div class="wrapper">
@@ -83,6 +91,7 @@
       </div>
     </div>
     <!--end testi  -->
+
     <footer>
       <div class="container">
         <div class="footer">
