--- a/index.html
+++ b/index.html
@@ -92,19 +92,21 @@
     </div>
     <!--end testi  -->
 
-    <footer>
-      <div class="container">
-        <div class="footer">
-          <a href="#"><img class="sosmed" src="./img/Mask Group_4.png" alt="logo" /></a>
-          <nav>
-            <ul class="footer__links">
-              <li><a href="#">Our Bussines</a></li>
-              <li><a href="#">News</a></li>
-            </ul>
-          </nav>
-          <a href="#"><img src="./img/logo-kopi.png" alt="Logo-kopi.jpg" /></a>
+    <div class="footer">
+      <div class="footer_wrapper">
+        <div class="footer-left">
+          <img class="sosmed" src="./img/Mask Group_4.png" alt="">
+          <img class="logo-footer" src="./img/Untitled-1 2.png" alt="">
+        </div>
+        <div class="footer-mid">
+          <p><a href="#">Our Business</a></p>
+          <p><a href="#">News</a></p>
+        </div>
+        <div class="footer-right">
+          <img class="logo-footer" src="./img/Untitled-1 2.png" alt="">
+          <p>@2021 Kopi Karma</p>
         </div>
       </div>
-    </footer>
+      </div>
   </body>
 </html>
