--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       </div>
     </div>
 
+    <!-- BAGIAN visimisi -->
     <div class="our-vision">
       <div class="container">
         <ul class="flex-list">
@@ -73,9 +74,37 @@
         </ul>
       </div>
     </div>
-    <div class="story">
-      <div class="container"></div>
+    <!-- end visimisi -->
+
+    <!-- BAGIAN SEJARAH -->
+    <div class="container_history">
+      <div class="background_history">
+        <div class="judul_history">
+          <h2>SEJARAH KOPI KRAMA GLOBAL</h2>
+          <p>Sejarah Kopi Krama Global dimulai tahun 2008 yang termotivasi oleh keinginan para pemegang saham <br> untuk membawa Kopi Krama Global menuju pasar global.</p>
+        </div>
+        <div class="content_history">
+          <div class="content_1">
+            <img class="image_history" src="./img/Mask Group_1.png" alt="">
+            <p>Berkomitment untuk menjadi perusahaan makanan dan minuman nomor satu di Asia melalui 5 nilai yang dikenal dengan We See To Win.
+            </p>
+          </div>
+          <div class="content_2">
+            <img  class="image_history" src="./img/Mask Group_2.png" alt="">
+            <p>Sinergi dari beberapa perusahaan yang bergerak di industry makanan dan minuman yang meliputi perkebunan, manufaktur, distribusi, dan kafe</p>
+          </div>
+          <div class="content_3">
+            <img class="image_history" src="./img/Mask Group_3.png" alt="">
+            <p>Siap untuk bersaing di pasar global dengan mempromosikan: <br> <br>
+                CONTINUOUS IMPROVEMENT
+                WORLD-CLASS PROCESSES
+                FINANCIAL STRENGTH
+                GREAT PEOPLE</p>
+          </div>
+        </div>
+      </div>
     </div>
+    <!--end sejarah -->
 
     <!-- testi -->
     <div class="testi">
@@ -92,6 +121,7 @@
     </div>
     <!--end testi  -->
 
+    <!-- BAGIAN footer -->
     <div class="footer">
       <div class="footer_wrapper">
         <div class="footer-left">
@@ -107,6 +137,7 @@
           <p>@2021 Kopi Karma</p>
         </div>
       </div>
-      </div>
+    </div>
+    <!-- end footer -->
   </body>
 </html>
