edit visimisi & testimony
edit visimisi & testimony, 80% belum termasuk animasi dan responsive.

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
     <!-- BAGIAN visimisi -->
     <div class="our-vision">
-      <div class="container">
-        <ul class="flex-list">
-          <li class="li1">
+      <div class="wrapper-vision">
+        <div class="content-vision">
+          <div class="content-space">
             <img src="./img/visi&misi.png" alt="visi&misi.jpg" />
-          </li>
-          <li class="li2">
-            <div class="text-list">
+          </div>
+          <div class="content-space">
+            <div class="text-list visimisi">
               <h2>Visi</h2>
               <p>Bahan dan menghasilkan produk yang terbaik.</p>
               <p>Menjadikan Kopi Krama sebagai merk terkenal dan familiar.</p>
@@ -56,8 +56,10 @@
               <h2>Misi</h2>
               <p>Bekerja keras untuk menjual dan menggunakan produk yang ramah lingkungan serta layak dinikmati oleh pelanggan</p>
             </div>
-          </li>
-          <li class="li3">
+          </div>
+        </div>
+        <div class="content-value">
+          <div class="content-space">
             <div class="text-list">
               <h2>Value</h2>
               <h4>Costumer Focus</h4>
@@ -67,11 +69,11 @@
               <h4>Winning Team</h4>
               <p2>Brpartisipasi, berkontribusi dan berkolaborasi secara aktif untuk memastikan keberhasilan organisasi dalam mencapai tujuannya</p2>
             </div>
-          </li>
-          <li class="li4">
+          </div>
+          <div class="content-space">
             <img src="./img/value.png" alt="" />
-          </li>
-        </ul>
+          </div>
+        </div>
       </div>
     </div>
     <!-- end visimisi -->
@@ -107,14 +109,70 @@
     <!--end sejarah -->
 
     <!-- testi -->
-    <div class="testi">
-      <div class="wrapper">
-        <div class="container">
-          <div class="flex-container">
-            <div class="flex-1">1</div>
-            <div class="flex-2">2</div>
-            <div></div>
-            <div></div>
+    <div class="testimony">
+      <div class="wrapper_testimony">
+        <h2>Loved by Thousand of</h2>
+        <h2>Happy Customer</h2>
+        <p>These are the stories of our customers who have visited us with great pleasure.</p>
+        <div class="testement">
+          <div class="comment">
+            <div class="user">
+              <img src="./img/avatar.png">
+              <div class="info">
+                <span class="name">Viezh Robert</span><br>
+                <span class="from">Warsaw, Poland</span>
+              </div>
+              <div class="star">
+                <span>4.5</span>
+                <img src="./img/ic_star.png">
+              </div>
+            </div>
+            <p>“Wow... I am very happy to spend my whole day here. the Wi-fi is good, and the coffee and meals tho. I like it here!! Very recommended!"</p>
+          </div>
+          <div class="comment">
+            <div class="user">
+              <img src="./img/avatar.png">
+              <div class="info">
+                <span class="name">Viezh Robert</span><br>
+                <span class="from">Warsaw, Poland</span>
+              </div>
+              <div class="star">
+                <span>4.5</span>
+                <img src="./img/ic_star.png">
+              </div>
+            </div>
+            <p>“Wow... I am very happy to spend my whole day here. the Wi-fi is good, and the coffee and meals tho. I like it here!! Very recommended!"</p>
+          </div>
+          <div class="comment">
+            <div class="user">
+              <img src="./img/avatar.png">
+              <div class="info">
+                <span class="name">Viezh Robert</span><br>
+                <span class="from">Warsaw, Poland</span>
+              </div>
+              <div class="star">
+                <span>4.5</span>
+                <img src="./img/ic_star.png">
+              </div>
+            </div>
+            <p>“Wow... I am very happy to spend my whole day here. the Wi-fi is good, and the coffee and meals tho. I like it here!! Very recommended!"</p>
+          </div>
+        </div>
+        <div class="nav">
+          <div class="wrapper-nav">
+            <ul>
+              <li><div class="rounded"></div></li>
+              <li><div class="rounded"></div></li>
+              <li><div class="rounded"></div></li>
+            </ul>
+          </div>
+          <div class="prevnext">
+            <div class="btn">
+              <img src="./img/ic_arrow_left.png">
+            </div>
+            <div class="btn">
+              <img src="./img/ic_arrow.png">
+            </div>
           </div>
         </div>
       </div>
