--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="about-us">
-      <div class="container">
+      <div class="about-container">
 
       </div>
     </div>
